<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Activities.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/back_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_for_a_movie"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border"
        android:padding="8dp">

        <EditText
            android:id="@+id/movieNameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_movie_name"
            android:padding="5dp" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_background"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/suggestionsLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Suggestions :"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/queriesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/resultRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noResultTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_results"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="?android:colorAccent"
            android:indeterminateTintMode="src_in"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>